# discordapp

./: .gitignore  Cargo.toml  TODO
src/: ansi.rs  block_on.rs  categories.rs  channels.rs  colors.rs  download.rs  file.rs  format.rs  grid.rs  input.rs  main.rs  message.rs  messages.rs  render.rs  save.rs  servers.rs  task.rs  textbox.rs
src/input/: categories.rs  channels.rs  messages.rs  servers.rs
