[package]
name = "discordapp"
version = "0.1.0"
authors = ["Thea <theah0032@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.8"
tokio = {version = "1.8.0", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
crossterm = "0.20.0"
unicode-segmentation = "1.6.0"
serde_json = "1.0.66"
serde = "1.0.130"
chrono = "0.4.19"
grid_ui = "0.1.0"
